Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNcaNhDDPBF7cNceaX21Pkx",
+      "authorship_tag": "ABX9TyOiCf0vdTsFMfv4Ig491n1n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -753,7 +753,7 @@
         "    .\n",
         "    <statement-N>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,18 +763,6 @@
       },
       "source": [
         "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IF-Y_2F7Kfgs"
-      },
-      "source": [
-        "\n",
-        "Since there is a valid use-case for class-private members (namely to avoid name clashes of names with names defined by subclasses), there is limited support for such a mechanism, called name mangling. Any identifier of the form __spam (at least two leading underscores, at most one trailing underscore) is textually replaced with _classname__spam, where classname is the current class name with leading underscore(s) stripped. This mangling is done without regard to the syntactic position of the identifier, as long as it occurs within the definition of a class.\n",
-        "\n",
-        "Name mangling is helpful for letting subclasses override methods without breaking intraclass method calls. For example:"
       ]
     },
     {
@@ -802,21 +790,8 @@
         "        for item in zip(keys, values):\n",
         "            self.items_list.append(item)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jIGehKEutHmo"
-      },
-      "source": [
-        "The above example would work even if MappingSubclass were to introduce a __update identifier since it is replaced with _Mapping__update in the Mapping class and _MappingSubclass__update in the MappingSubclass class respectively.\n",
-        "\n",
-        "Note that the mangling rules are designed mostly to avoid accidents; it still is possible to access or modify a variable that is considered private. This can even be useful in special circumstances, such as in the debugger.\n",
-        "\n",
-        "Notice that code passed to exec() or eval() does not consider the classname of the invoking class to be the current class; this is similar to the effect of the global statement, the effect of which is likewise restricted to code that is byte-compiled together. The same restriction applies to getattr(), setattr() and delattr(), as well as when referencing __dict__ directly."
-      ]
     },
     {
       "cell_type": "markdown",
@@ -824,10 +799,17 @@
         "id": "AQbEqzIdtQ41"
       },
       "source": [
-        "9.7. Odds and Ends¶\n",
-        "\n",
-        "\n",
-        "Sometimes it is useful to have a data type similar to the Pascal “record” or C “struct”, bundling together a few named data items. An empty class definition will do nicely:"
+        "### ガラクタ Odds and Ends¶\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6jo2O8xfuFTX"
+      },
+      "source": [
+        "クラスを使って、Pascal の record や C の struct のようなことがでできる。\n"
       ]
     },
     {
@@ -852,38 +834,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WQhm_kg1tWQG"
-      },
-      "source": [
-        "A piece of Python code that expects a particular abstract data type can often be passed a class that emulates the methods of that data type instead. For instance, if you have a function that formats some data from a file object, you can define a class with methods read() and readline() that get the data from a string buffer instead, and pass it as an argument.\n",
-        "\n",
-        "Instance method objects have attributes, too: m.__self__ is the instance object with the method m(), and m.__func__ is the function object corresponding to the method."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "U7SbhWIYtZWE"
       },
       "source": [
-        "# 9.8. Iterators\n",
-        "\n",
-        "By now you have probably noticed that most container objects can be looped over using a for statement:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "utCxhG8ttndg"
-      },
-      "source": [
-        ""
+        "## イテレーター\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IJCaRFQGtqMQ"
+        "id": "IJCaRFQGtqMQ",
+        "outputId": "f9a73bc3-9b5b-44fb-d2a5-0d5a1e541d80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "for element in [1, 2, 3]:\n",
@@ -894,11 +858,29 @@
         "    print(key)\n",
         "for char in \"123\":\n",
         "    print(char)\n",
-        "for line in open(\"myfile.txt\"):\n",
-        "    print(line, end='')"
+        "# for line in open(\"myfile.txt\"):\n",
+        "#     print(line, end='')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "one\n",
+            "two\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -906,33 +888,41 @@
         "id": "OHCbQDrLtrDI"
       },
       "source": [
-        "This style of access is clear, concise, and convenient. The use of iterators pervades and unifies Python. Behind the scenes, the for statement calls iter() on the container object. The function returns an iterator object that defines the method __next__() which accesses elements in the container one at a time. When there are no more elements, __next__() raises a StopIteration exception which tells the for loop to terminate. You can call the __next__() method using the next() built-in function; this example shows how it all works:"
+        "イテレーター for の裏では iter() という関数が呼ばれて、イテレーターオブジェクトが作られる。 イテレーターオブジェクトでは __next__() メソッドで1つずつ処理される。\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4dVnvfGsttQg"
+        "id": "4dVnvfGsttQg",
+        "outputId": "8a726c40-692a-48ac-f677-807ce18f911f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ">>> s = 'abc'\n",
-        ">>> it = iter(s)\n",
-        ">>> it\n",
-        "<iterator object at 0x00A1DB50>\n",
-        ">>> next(it)\n",
-        "'a'\n",
-        ">>> next(it)\n",
-        "'b'\n",
-        ">>> next(it)\n",
-        "'c'\n",
-        ">>> next(it)\n",
-        "Traceback (most recent call last):\n",
-        "  File \"<stdin>\", line 1, in <module>\n",
-        "    next(it)\n",
-        "StopIteration"
+        "s = 'abc'\n",
+        "it = iter(s)\n",
+        "print(it) #=> <iterator object at 0x00A1DB50>\n",
+        "print(next(it)) #=> 'a'\n",
+        "print(next(it)) #=> 'b'\n",
+        "print(next(it)) #=> 'c'\n",
+        "# print(next(it)) #=> StopIteration\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<str_iterator object at 0x7effdfc95588>\n",
+            "a\n",
+            "b\n",
+            "c\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
