Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOiCf0vdTsFMfv4Ig491n1n",
+      "authorship_tag": "ABX9TyPiTsAMcaJOf+DF6TKlG6yZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -757,15 +757,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JUyFTsdoLkkC"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "woSSItzQtLE0"
@@ -790,7 +781,7 @@
         "        for item in zip(keys, values):\n",
         "            self.items_list.append(item)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -810,6 +801,15 @@
       },
       "source": [
         "クラスを使って、Pascal の record や C の struct のようなことがでできる。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JUyFTsdoLkkC"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -861,7 +861,7 @@
         "# for line in open(\"myfile.txt\"):\n",
         "#     print(line, end='')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,7 +910,7 @@
         "print(next(it)) #=> 'c'\n",
         "# print(next(it)) #=> StopIteration\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,13 +930,19 @@
         "id": "CzDMR8cltyCA"
       },
       "source": [
-        "Having seen the mechanics behind the iterator protocol, it is easy to add iterator behavior to your classes. Define an __iter__() method which returns an object with a __next__() method. If the class defines __next__(), then __iter__() can just return self:"
+        "イテレーターの仕組みがわかったので、自分が作ったクラスにイテレーター動作をさせることができる。\n",
+        "\n",
+        "`__iter__()` メソッドと、`__next__()` メソッドをつくる。 `__iter__()` メソッドは self を返すだけでよい。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YmuNcOoHt0Kl"
+        "id": "YmuNcOoHt0Kl",
+        "outputId": "30e86586-18dd-4ed5-9bdc-4dc729107879",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "class Reverse:\n",
@@ -953,20 +959,35 @@
         "            raise StopIteration\n",
         "        self.index = self.index - 1\n",
         "        return self.data[self.index]\n",
-        ">>>\n",
-        ">>> rev = Reverse('spam')\n",
-        ">>> iter(rev)\n",
-        "<__main__.Reverse object at 0x00A1DB50>\n",
-        ">>> for char in rev:\n",
-        "...     print(char)\n",
-        "...\n",
-        "m\n",
-        "a\n",
-        "p\n",
-        "s"
+        "\n",
+        "rev = Reverse('spam')\n",
+        "print(rev)\n",
+        "print(iter(rev))\n",
+        "\n",
+        "for char in rev:\n",
+        "    print(char)\n",
+        "\n",
+        "# 実験\n",
+        "print([char for char in 'a23'])\n",
+        "print([char for char in rev])\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<__main__.Reverse object at 0x7f9609309c50>\n",
+            "<__main__.Reverse object at 0x7f9609309c50>\n",
+            "m\n",
+            "a\n",
+            "p\n",
+            "s\n",
+            "['a', '2', '3']\n",
+            "[]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -974,43 +995,88 @@
         "id": "AvqI2j47t3yX"
       },
       "source": [
-        "# 9.9. Generators\n",
+        "## ジェネレーター generator\n",
         "\n",
-        "Generators are a simple and powerful tool for creating iterators. They are written like regular functions but use the yield statement whenever they want to return data. Each time next() is called on it, the generator resumes where it left off (it remembers all the data values and which statement was last executed). An example shows that generators can be trivially easy to create:"
+        "ジェネレーターはイテレーターを作るのに簡単で強力なツールである。\n",
+        "\n",
+        "ジェネレーターは通常の関数と同じ形をしているが、返り値として yield を使う。 next() が呼ばれると、ジェネレーターは前回終了時の状態を覚えていて、そこから動作が始まる。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IPA2k908uHDJ"
+        "id": "IPA2k908uHDJ",
+        "outputId": "29b4f7d9-ed96-43be-e2ce-1a82b4a22e1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "def reverse(data):\n",
         "    for index in range(len(data)-1, -1, -1):\n",
         "        yield data[index]\n",
-        ">>>\n",
-        ">>> for char in reverse('golf'):\n",
-        "...     print(char)\n",
-        "...\n",
-        "f\n",
-        "l\n",
-        "o\n",
-        "g"
+        "\n",
+        "for char in reverse('golf'):\n",
+        "    print(char)\n",
+        "\n",
+        "# 実験\n",
+        "\n",
+        "[char for char in reverse('golf')]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "f\n",
+            "l\n",
+            "o\n",
+            "g\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['f', 'l', 'o', 'g']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "x_Al9DL1uIqR"
+        "id": "ubEgOJIM_2QL",
+        "outputId": "3e0aa73d-0657-43a8-9835-4104ed748966",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "Anything that can be done with generators can also be done with class-based iterators as described in the previous section. What makes generators so compact is that the __iter__() and __next__() methods are created automatically.\n",
+        "# 実験\n",
         "\n",
-        "Another key feature is that the local variables and execution state are automatically saved between calls. This made the function easier to write and much more clear than an approach using instance variables like self.index and self.data.\n",
-        "\n",
-        "In addition to automatic method creation and saving program state, when generators terminate, they automatically raise StopIteration. In combination, these features make it easy to create iterators with no more effort than writing a regular function."
+        "[x for x in range(10, -5, -1)]"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0, -1, -2, -3, -4]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
       ]
     },
     {
@@ -1019,10 +1085,61 @@
         "id": "4AFdimHLuLyJ"
       },
       "source": [
-        "# 9.10. Generator Expressions¶\n",
-        "Some simple generators can be coded succinctly as expressions using a syntax similar to list comprehensions but with parentheses instead of square brackets. These expressions are designed for situations where the generator is used right away by an enclosing function. Generator expressions are more compact but less versatile than full generator definitions and tend to be more memory friendly than equivalent list comprehensions.\n",
+        "## ジェネレーター式\n",
         "\n",
-        "Examples:"
+        "ジェネレーター式は、内包表記 list comprehension と似た文法で、かぎかっこ brackets の代わりに丸括弧 parenthesis を使った表記法である。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sMDMdCezBIgs",
+        "outputId": "a2e62921-fef0-4e52-b5ed-a8837a7a8a20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "print(sum([1,2,3]))\n",
+        "print(sum(x for x in range(4)))\n",
+        "print(sum([x for x in range(4)]))\n",
+        "\n",
+        "xvec=[10,20,30]\n",
+        "yvec=[7,5,3]\n",
+        "print(sum(x*y for x, y in zip(xvec,yvec)))\n",
+        "\n",
+        "page='''this is a pen.  that is a ball.\n",
+        "that is a book.\n",
+        "the ball is round.'''\n",
+        "\n",
+        "unique_words = set(word for line in page.split('\\n')  for word in line.replace('.','').split())\n",
+        "\n",
+        "print(sorted(unique_words))\n"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "6\n",
+            "6\n",
+            "260\n",
+            "['a', 'ball', 'book', 'is', 'pen', 'round', 'that', 'the', 'this']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N9jrsALDHuk7"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
