Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -4731,30 +4731,33 @@
       "cell_type": "code",
       "metadata": {
         "id": "sxkUPIuaMHM6",
-        "outputId": "7143bb23-81d8-4f6b-aa84-cad6f3f0493b",
+        "outputId": "5d991c0b-6dcb-4c4b-88db-475577d39c45",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
+        "import numpy as np\n",
+        "\n",
         "class NamedArray(np.ndarray):\n",
         "    def __new__(cls, array, name=\"no name\"):\n",
         "        obj = np.asarray(array).view(cls)\n",
-        "        obj.name = name\n",
+        "        obj.__class__.name = name\n",
         "        return obj\n",
         "    def __array_finalize__(self, obj):\n",
         "        if obj is None: return\n",
-        "        self.info = getattr(obj, 'name', \"no name\")\n",
+        "        self.info = getattr(obj, 'name', \"noo name\")\n",
         "\n",
         "Z = NamedArray(np.arange(10), \"range_10\")\n",
+        "print(Z.__class__.name)\n",
         "print (Z.name)"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "range_10\n",
             "range_10\n"
           ],
           "name": "stdout"
@@ -4764,13 +4767,163 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7QytioYnc6J6"
+        "id": "bExqxPe56Vmn",
+        "outputId": "dba3a161-a9cf-46d4-ab15-af0d35ce3c48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "# 実験\n",
+        "\n",
+        "Z = NamedArray(np.arange(10))\n",
+        "Z.name = \"range_10\"\n",
+        "print(Z.__class__.name) \n",
+        "print(Z.name)\n",
+        "\n",
+        "Z = NamedArray(None)\n",
+        "Z.name = \"range_10\"\n",
+        "print(Z.__class__.name) \n",
+        "print(Z.name)\n",
+        "\n",
+        "Z = NamedArray(\"yes\", name=\"no\")\n",
+        "Z.name = \"range_10\"\n",
+        "print(Z.__class__.name) \n",
+        "print(Z.name)\n",
+        "\n",
+        "type (Z)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "no name\n",
+            "no name\n",
+            "no name\n",
+            "range_10\n",
+            "no\n",
+            "range_10\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "__main__.NamedArray"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MwqqxYL8cBJg"
+      },
+      "source": [
+        "通常クラスのインスタンスは何もしないでも、name 属性がある。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LFAgN-ewcNa4",
+        "outputId": "b6f1b38d-5c69-4655-9362-3514270da825",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 \n",
+        "\n",
+        "class MyClass:\n",
+        "    pass\n",
+        "\n",
+        "m = MyClass()\n",
+        "m.name = \"myname\"\n",
+        "print(m.name)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "myname\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "teJhxJXlcppw"
+      },
+      "source": [
+        "設問の意味はクラスに name 属性をつけたい、ということか。 でも、解答例の\n",
+        "\n",
+        "print(Z.name)\n",
+        "\n",
+        "は、インスタンスの name を調べているだけで、クラスの name を調べているわけではない。\n",
+        "\n",
+        "プログラムは、`__init__()` ではなく、`__new__()` で初期化することにより、self ではなく cls に属性をつける風に読める。\n",
+        "\n",
+        "help(np.ndarray.view) => New view of array with the same data.\n",
+        "\n",
+        "なので、view() はなにもしていない。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q_VApTRM9WOC"
+      },
+      "source": [
+        "```\n",
+        "__array_finalize__(self, obj):\n",
+        "        if obj is None: return\n",
+        "        self.info = getattr(obj, 'name', \"noo name\")\n",
+        "```\n",
+        "\n",
+        "は何をしているのか? "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4FNFbJK29vZg",
+        "outputId": "0f51d90c-c14c-40e9-8514-0d24153b1531",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "help(getattr)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Help on built-in function getattr in module builtins:\n",
+            "\n",
+            "getattr(...)\n",
+            "    getattr(object, name[, default]) -> value\n",
+            "    \n",
+            "    Get a named attribute from an object; getattr(x, 'y') is equivalent to x.y.\n",
+            "    When a default argument is given, it is returned when the attribute doesn't\n",
+            "    exist; without it, an exception is raised in that case.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
