Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRNVRlVHwJTpxgQGE4RVXp",
+      "authorship_tag": "ABX9TyM2CWAmAzCLwpNt1R8G/n7A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1102,7 +1102,7 @@
         "print(sum(x*y for x, y in zip(xvec,yvec)))\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1167,7 +1167,7 @@
         "\n",
         "print(valedictorian)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1191,7 @@
         "data = 'golf'\n",
         "list(data[i] for i in range(len(data)-1, -1, -1))\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1215,7 +1215,19 @@
       "source": [
         "# 課題 from 100_numpy_exercises\n",
         "\n",
-        "以上で python の class の tutorial を終わるが、そもそも読み始めたのは、100_numpy_exercises の解答例で class を作る際に `__new__()` と `__array_finalize__()` というのを使っていてこれが class を作る時の特別なメソッドかと思ったのだがそうではないのかもしれない。"
+        "以上で python の class の tutorial を終わるが、そもそも読み始めたのは、100_numpy_exercises の解答で class を作る際に `__new__()` と `__array_finalize__()` というのを使っていてこれが class を作る時の特別なメソッドかと思ったのだがそれらについての記述はなかった。\n",
+        "\n",
+        "今のわたしの理解。 `__new__()` は `__init__()` と似ているが、少し違う。 その関係もあって、`__array_finalize__()` が必要。\n",
+        "\n",
+        "いずれにしても課題は、name 属性を持つ配列クラスを作る、ということなので、書きの解答の最後の\n",
+        "\n",
+        "print (Z.name)\n",
+        "\n",
+        "ではインスタンスの name 属性を調べているだけなので、\n",
+        "\n",
+        "print(Z.__class__.name)\n",
+        "\n",
+        "とする必要がある、と思う。"
       ]
     },
     {
