Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2CWAmAzCLwpNt1R8G/n7A",
+      "authorship_tag": "ABX9TyMjcKvNV6GQ4cegnSDwuc3p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,12 +122,14 @@
         "id": "Zd-FsuisoYFK"
       },
       "source": [
+        "%%script false\n",
+        "\n",
         "class ClassName:\n",
-        "    '''\n",
         "    <statement-1>\n",
-        "    ...\n",
-        "    <statement-N>'''\n",
-        "    pass"
+        "    .\n",
+        "    .\n",
+        "    .\n",
+        "    <statement-N>\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -189,7 +191,7 @@
         "\n",
         "```python\n",
         "def __int__(self):\n",
-        "  self.darta=[]\n",
+        "  self.data=[]\n",
         "```\n"
       ]
     },
@@ -1219,13 +1221,17 @@
         "\n",
         "今のわたしの理解。 `__new__()` は `__init__()` と似ているが、少し違う。 その関係もあって、`__array_finalize__()` が必要。\n",
         "\n",
-        "いずれにしても課題は、name 属性を持つ配列クラスを作る、ということなので、書きの解答の最後の\n",
+        "いずれにしても課題は、name 属性を持つ配列クラスを作る、ということなので、下記の解答の最後の\n",
         "\n",
-        "print (Z.name)\n",
+        "``` python\n",
+        "print(Z.name)\n",
+        "```\n",
         "\n",
         "ではインスタンスの name 属性を調べているだけなので、\n",
         "\n",
+        "``` python\n",
         "print(Z.__class__.name)\n",
+        "```\n",
         "\n",
         "とする必要がある、と思う。"
       ]
